MP2-2920 Fixed layout issues for project report

--- a/jems-ui/src/app/project/project-application/report/project-report/project-report.component.scss
+++ b/jems-ui/src/app/project/project-application/report/project-report/project-report.component.scss
@@ -7,3 +7,7 @@
 .row-link:hover {
   cursor: pointer;
 }
+
+.mat-column-createdAt, .mat-column-firstSubmission {
+  flex: 0 0 16%;
+}
